--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,1 +1,16 @@
-<p>todos works!</p>
+<ul class="todos">
+  <li *ngFor="let todo of todos"
+      [class.selected]="todo === selectedTodo"
+      (click)="onSelect(todo)">
+    <span class="badge">{{todo.id}}</span> {{todo.name}}
+  </li>
+</ul>
+<div *ngIf="selectedTodo">
+  <h2>{{selectedTodo.name | uppercase}} Details</h2>
+  <div><span>id: </span>{{selectedTodo.id}}</div>
+  <div>
+    <label>name:
+      <input [(ngModel)]="selectedTodo.name" placeholder="name"/>
+    </label>
+  </div>
+</div>
