--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <h1>{{title}}</h1>
-<app-todos></app-todos>
+<nav>
+  <a routerLink="/todos">Heroes</a>
+</nav>
+<router-outlet></router-outlet>
 <app-messages></app-messages>
