--- a/src/app/todo-detail/todo-detail.component.html
+++ b/src/app/todo-detail/todo-detail.component.html
@@ -6,4 +6,5 @@
       <input [(ngModel)]="todo.name" placeholder="name"/>
     </label>
   </div>
+  <button (click)="goBack()">go back</button>
 </div>
