--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1>{{title}}</h1>
 <nav>
-  <a routerLink="/todos">Heroes</a>
+  <a routerLink="/todos">Todos</a>
 </nav>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
