--- a/src/app/todo-detail/todo-detail.component.html
+++ b/src/app/todo-detail/todo-detail.component.html
@@ -1,10 +1,11 @@
 <div *ngIf="todo">
-  <h2>{{todo.name | uppercase}} Details</h2>
+  <h2>{{todo.title | uppercase}} Details</h2>
   <div><span>id: </span>{{todo.id}}</div>
   <div>
     <label>name:
-      <input [(ngModel)]="todo.name" placeholder="name"/>
+      <input [(ngModel)]="todo.title" placeholder="name"/>
     </label>
   </div>
+  <button (click)="save()">save</button>
   <button (click)="goBack()">go back</button>
 </div>
