Implemented addTodo component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h1>{{title}}</h1>
 <nav>
   <a routerLink="/todos">Todos</a>
+  <a routerLink="/todo/add">Add todo</a>
 </nav>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
