--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,14 @@
-<p>login works!</p>
+<div>
+  <h2>Login</h2>
+  <div>
+    <label>Name:
+      <input [(ngModel)]="user.name" name="username"/>
+    </label>
+  </div>
+  <div>
+    <label>Password
+      <input [(ngModel)]="user.password" name="password" type="password"/>
+    </label>
+  </div>
+  <button (click)="login()">Login</button>
+</div>
